--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@
 /core/mybatis-generator-systests-domtests/.project
 /core/mybatis-generator-systests-domtests/.settings
 /core/mybatis-generator-systests-domtests/target
+
+#myself
+*.iml
+.idea
